<resources>
    <string name="app_name">weatherman</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="preferences">preferences</string>
    <string name="history">history</string>
    <string name="Temperature">Temperature</string>
    <string name="Humidity">Humidity</string>
    <string name="MaxTempPreferencesTitle">Max temperature:</string>
    <string name="MinTempPreferencesTitle">Min temperature:</string>
    <string name="MinHumPreferencesTitle">Min humidity:</string>
    <string name="MaxHumPreferencesTitle">Max humidity:</string>
    <string name="title_activity_lecture_history">LectureHistoryActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="iptitle">Device IP</string>
    <string name="putHereTheIpOfTheRaspberry">Put here the IPv4 of the Raspberry</string>
    <string name="testLeds">test leds</string>
</resources>